style(image composition): added clearfix added flex to align text center of element added correct basic scrset of images

--- a/components/person/person.less
+++ b/components/person/person.less
@@ -9,7 +9,7 @@
 
 	&:hover {
 		& > .person-text {
-			display: block;
+			display: flex;
 		}
 	}
 	
@@ -25,12 +25,11 @@
 }
 
 .person-text {
-	display: none;
-	position: absolute;
-	top: 30%;
-	width: 100%;
-	top: 0;
-	padding-top: 60%;	
+    display: none;
+    position: absolute;
+    flex-direction: column;
+    top: 0;
+    justify-content: center;
 	width: 100%;
 	height: 100%;
 	text-align: center;
